added win sound, edited colisions, added play again and exit buttons after gameover - also gameover and reset position methods

--- a/AirHockey.csproj
+++ b/AirHockey.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <None Include="Resources\impact_beep.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\win.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\synth_sound.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
